--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,28 +7,44 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: url('assets/background.jpg') no-repeat center center fixed;
+            background: url('https://images.unsplash.com/photo-1601933470928-c1e0b79d61f6?auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
             padding: 0;
             color: #333;
+            scroll-behavior: smooth;
         }
         body::before {
             content: "";
             position: fixed;
             top: 0; left: 0; right: 0; bottom: 0;
-            background-color: rgba(255, 255, 255, 0.5);
+            background-color: rgba(255, 255, 255, 0.6);
             z-index: -1;
         }
         header {
-            background-color: rgba(0, 64, 128, 0.8);
-            padding: 20px;
-            text-align: center;
+            background-color: rgba(0, 64, 128, 0.9);
+            padding: 10px 20px;
             color: white;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
         }
         header img {
-            max-width: 160px;
+            max-width: 120px;
             height: auto;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: bold;
+            font-size: 16px;
+        }
+        nav a:hover {
+            text-decoration: underline;
         }
         main {
             max-width: 900px;
@@ -39,7 +54,10 @@
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
         }
-        h1 {
+        section {
+            margin-bottom: 50px;
+        }
+        h1, h2 {
             color: #004080;
             text-align: center;
         }
@@ -62,7 +80,6 @@
             background: #005900;
         }
         .contact-info {
-            margin-top: 30px;
             font-size: 16px;
             line-height: 1.6;
         }
@@ -98,32 +115,56 @@
 
 <header>
     <img src="assets/logo.png" alt="SD Foam Industries Logo" />
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#contact">Contact</a>
+        <a href="#services">Services</a>
+        <a href="#about">About</a>
+        <a href="#gallery">Gallery</a>
+    </nav>
 </header>
 
 <main>
-    <h1>SD Foam Industries</h1>
-    <p style="text-align:center;">Leading manufacturer of quality foam & mattress products.</p>
+    <section id="home">
+        <h1>SD Foam Industries</h1>
+        <p style="text-align:center;">Leading manufacturer of quality foam & mattress products.</p>
+    </section>
 
-    <div class="gallery">
-        <img src="assets/image1.jpg" alt="Product Image 1" />
-        <img src="assets/image2.jpg" alt="Product Image 2" />
-        <img src="assets/image3.jpg" alt="Product Image 3" />
-        <img src="assets/image4.jpg" alt="Product Image 4" />
-        <img src="assets/image7.jpg" alt="Product Image 5" />
-        <img src="assets/image8.jpg" alt="Product Image 6" />
-        <img src="assets/image14.jpg" alt="Product Image 7" />
-    </div>
+    <section id="services">
+        <h2>Our Services</h2>
+        <p>We offer a wide range of premium foam and mattress products tailored to meet the needs of our customers.</p>
+    </section>
 
-    <a href="assets/product1.pdf" class="pdf-link" target="_blank">Download Our Catalogue</a>
+    <section id="about">
+        <h2>About Us</h2>
+        <p>SD Foam Industries is dedicated to providing high-quality foam solutions with a strong commitment to customer satisfaction. Our products are trusted across various sectors for their durability and comfort.</p>
+    </section>
 
-    <div class="contact-info">
+    <section id="gallery">
+        <h2>Gallery</h2>
+        <div class="gallery">
+            <img src="assets/image1.jpg" alt="Product Image 1" />
+            <img src="assets/image2.jpg" alt="Product Image 2" />
+            <img src="assets/image3.jpg" alt="Product Image 3" />
+            <img src="assets/image4.jpg" alt="Product Image 4" />
+            <img src="assets/image7.jpg" alt="Product Image 5" />
+            <img src="assets/image8.jpg" alt="Product Image 6" />
+            <img src="assets/image14.jpg" alt="Product Image 7" />
+        </div>
+        <a href="assets/product1.pdf" class="pdf-link" target="_blank">Download Our Catalogue</a>
+    </section>
+
+    <section id="contact">
         <h2>Contact Us</h2>
-        <p><strong>Address:</strong> Mangala to Sahidawali Road, Village Mangala, Sirsa‑125055 (Haryana)</p>
-        <p><strong>Email:</strong> <a href="mailto:sdfoamindustries@gmail.com">sdfoamindustries@gmail.com</a></p>
-        <p><strong>Office:</strong> <a href="tel:8950496914">8950496914</a> | <a href="https://wa.me/918950496914" target="_blank">WhatsApp</a></p>
-        <p><strong>Mr. Deepak Kumar:</strong> <a href="tel:8571042210">8571042210</a> | <a href="https://wa.me/918571042210" target="_blank">WhatsApp</a></p>
-        <p><strong>GM Mr. Dinesh Giri:</strong> <a href="tel:8368926021">8368926021</a> | <a href="https://wa.me/918368926021" target="_blank">WhatsApp</a></p>
-    </div>
+        <div class="contact-info">
+            <p><strong>Address:</strong> Mangala to Sahidawali Road, Village Mangala, Sirsa‑125055 (Haryana)</p>
+            <p><strong>Email:</strong> <a href="mailto:sdfoamindustries@gmail.com">sdfoamindustries@gmail.com</a></p>
+            <p><strong>Office:</strong> <a href="tel:8950496914">8950496914</a> | <a href="https://wa.me/918950496914" target="_blank">WhatsApp</a></p>
+            <p><strong>Mr. Deepak Kumar:</strong> <a href="tel:8571042210">8571042210</a> | <a href="https://wa.me/918571042210" target="_blank">WhatsApp</a></p>
+            <p><strong>GM Mr. Dinesh Giri:</strong> <a href="tel:8368926021">8368926021</a> | <a href="https://wa.me/918368926021" target="_blank">WhatsApp</a></p>
+            <p><strong>Sr. Salesman Mr. Pawan:</strong> <a href="tel:7447683905">7447683905</a> | <a href="https://wa.me/917447683905" target="_blank">WhatsApp</a></p>
+        </div>
+    </section>
 </main>
 
 <a href="https://wa.me/918950496914" class="whatsapp-button" target="_blank" aria-label="Chat on WhatsApp">
