--- a/index.html
+++ b/index.html
@@ -132,12 +132,22 @@
 
     <section id="services">
         <h2>Our Services</h2>
-        <p>We offer a wide range of premium foam and mattress products tailored to meet the needs of our customers.</p>
+        <p>At SD Foam Industries, we pride ourselves on providing exceptional services to our valued customers:</p>
+        <ul>
+            <li>✅ All India Delivery Network</li>
+            <li>✅ Consistent Quality Assurance</li>
+            <li>✅ Established Goodwill in the Industry</li>
+            <li>✅ Professional & Friendly Customer Service</li>
+            <li>✅ Timely Dispatch & Logistics Support</li>
+            <li>✅ Competitive Pricing</li>
+        </ul>
     </section>
 
     <section id="about">
         <h2>About Us</h2>
-        <p>SD Foam Industries is dedicated to providing high-quality foam solutions with a strong commitment to customer satisfaction. Our products are trusted across various sectors for their durability and comfort.</p>
+        <p>SD Foam Industries is a trusted name in the world of PU Foam and Mattress manufacturing. We specialize in producing high-quality PU foam products that are widely used in mattresses, furniture, and various industrial applications.</p>
+        <p>Our state-of-the-art manufacturing facility and experienced team enable us to deliver innovative, durable, and comfortable foam solutions. From luxurious mattresses to customized foam products, we cater to a wide spectrum of customer needs.</p>
+        <p>We believe in maintaining long-term relationships with our clients by ensuring premium product quality, timely service, and ethical business practices. Our PU Foam mattresses are known for their superior comfort, longevity, and ergonomic support—making SD Foam Industries a preferred choice across India.</p>
     </section>
 
     <section id="gallery">
