--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SD Foam Industries</title>
+
+  <!-- COMBINED CSS HERE -->
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -107,82 +109,80 @@
       width: 35px;
       height: 35px;
     }
+    .center { text-align: center; }
   </style>
 </head>
+
 <body>
-
-<header>
-  <div class="logo-title">
-    <img src="assets/logo.png" alt="SD Foam Industries Logo" />
-    <span>S D FOAM INDUSTRIES</span>
-  </div>
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#contact">Contact</a>
-    <a href="#services">Services</a>
-    <a href="#about">About</a>
-    <a href="#gallery">Gallery</a>
-  </nav>
-</header>
-
-<main>
-  <section id="home">
-    <h1>SD Foam Industries</h1>
-    <p style="text-align:center;">Leading manufacturer of quality foam & mattress products.</p>
-  </section>
-
-  <section id="services">
-    <h2>Our Services</h2>
-    <ul>
-      <li>✅ All India Delivery Network</li>
-      <li>✅ Consistent Quality Assurance</li>
-      <li>✅ Established Goodwill in the Industry</li>
-      <li>✅ Professional & Friendly Customer Service</li>
-      <li>✅ Timely Dispatch & Logistics Support</li>
-      <li>✅ Competitive Pricing</li>
-    </ul>
-  </section>
-
-  <section id="about">
-    <h2>About Us</h2>
-    <p>SD Foam Industries is a trusted name in PU Foam and Mattress manufacturing. We produce high-quality foam products for mattresses, furniture, and industrial applications.</p>
-    <p>Our state-of-the-art facility and expert team deliver innovative, durable, and comfortable solutions—luxury mattresses and customized foam products tailored to your needs.</p>
-    <p>We maintain long-term relationships through premium quality, prompt service, and ethical business practices. Our PU Foam mattresses are celebrated for superior comfort, longevity, and ergonomic support—making SD Foam Industries a preferred choice across India.</p>
-  </section>
-
-  <section id="gallery">
-    <h2>Gallery</h2>
-    <div class="gallery">
-      <!-- Your existing photos -->
-      <img src="assets/image1.jpg" alt="Product Image 1" />
-      <img src="assets/image2.jpg" alt="Product Image 2" />
-      <img src="assets/image3.jpg" alt="Product Image 3" />
-      <img src="assets/image4.jpg" alt="Product Image 4" />
-      <img src="assets/image7.jpg" alt="Product Image 5" />
-      <img src="assets/image8.jpg" alt="Product Image 6" />
-      <img src="assets/image14.jpg" alt="Product Image 7" />
-      <!-- Extra HD mattress-only image -->
-      <img src="assets/mattress_hd.jpg" alt="HD Mattress Image" />
+  <header>
+    <div class="logo-title">
+      <img src="assets/logo.png" alt="SD Foam Industries Logo" />
+      <span>S D FOAM INDUSTRIES</span>
     </div>
-    <a href="assets/product1.pdf" class="pdf-link" target="_blank">Download Our Catalogue</a>
-  </section>
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#contact">Contact</a>
+      <a href="#services">Services</a>
+      <a href="#about">About</a>
+      <a href="#gallery">Gallery</a>
+    </nav>
+  </header>
 
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <div class="contact-info">
-      <p><strong>Address:</strong> Mangala to Sahidawali Road, Village Mangala, Sirsa‑125055 (Haryana)</p>
-      <p><strong>Email:</strong> <a href="mailto:sdfoamindustries@gmail.com">sdfoamindustries@gmail.com</a></p>
-      <p><strong>Office:</strong> <a href="tel:8950496914">8950496914</a> | <a href="https://wa.me/918950496914" target="_blank">WhatsApp</a></p>
-      <p><strong>Mr. Deepak Kumar:</strong> <a href="tel:8571042210">8571042210</a> | <a href="https://wa.me/918571042210" target="_blank">WhatsApp</a></p>
-      <p><strong>GM Mr. Dinesh Giri:</strong> <a href="tel:8368926021">8368926021</a> | <a href="https://wa.me/918368926021" target="_blank">WhatsApp</a></p>
-      <p><strong>Sr. Salesman Mr. Pawan:</strong> <a href="tel:7447683905">7447683905</a> | <a href="https://wa.me/917447683905" target="_blank">WhatsApp</a></p>
-    </div>
-  </section>
-</main>
+  <main>
+    <section id="home">
+      <h1>SD Foam Industries</h1>
+      <p class="center">Leading manufacturer of quality foam & mattress products.</p>
+    </section>
 
-<a href="https://wa.me/918950496914" class="whatsapp-button" target="_blank">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
-</a>
+    <section id="services">
+      <h2>Our Services</h2>
+      <ul>
+        <li>✅ All India Delivery Network</li>
+        <li>✅ Consistent Quality Assurance</li>
+        <li>✅ Established Goodwill in the Industry</li>
+        <li>✅ Professional & Friendly Customer Service</li>
+        <li>✅ Timely Dispatch & Logistics Support</li>
+        <li>✅ Competitive Pricing</li>
+      </ul>
+    </section>
 
+    <section id="about">
+      <h2>About Us</h2>
+      <p>SD Foam Industries is a trusted name in PU Foam and Mattress manufacturing. We produce high-quality foam products for mattresses, furniture, and industrial applications.</p>
+      <p>Our state-of-the-art facility and expert team deliver innovative, durable, and comfortable solutions—luxury mattresses and customized foam products tailored to your needs.</p>
+      <p>We maintain long-term relationships through premium quality, prompt service, and ethical business practices. Our PU Foam mattresses are celebrated for superior comfort, longevity, and ergonomic support—making SD Foam Industries a preferred choice across India.</p>
+    </section>
+
+    <section id="gallery">
+      <h2>Gallery</h2>
+      <div class="gallery">
+        <img src="assets/image1.jpg" alt="Product Image 1" />
+        <img src="assets/image2.jpg" alt="Product Image 2" />
+        <img src="assets/image3.jpg" alt="Product Image 3" />
+        <img src="assets/image4.jpg" alt="Product Image 4" />
+        <img src="assets/image7.jpg" alt="Product Image 5" />
+        <img src="assets/image8.jpg" alt="Product Image 6" />
+        <img src="assets/image14.jpg" alt="Product Image 7" />
+        <img src="assets/mattress_hd.jpg" alt="HD Mattress Image" />
+      </div>
+      <a href="assets/product1.pdf" class="pdf-link" target="_blank">Download Our Catalogue</a>
+    </section>
+
+    <section id="contact">
+      <h2>Contact Us</h2>
+      <div class="contact-info">
+        <p><strong>Address:</strong> Mangala to Sahidawali Road, Village Mangala, Sirsa‑125055 (Haryana)</p>
+        <p><strong>Email:</strong> <a href="mailto:sdfoamindustries@gmail.com">sdfoamindustries@gmail.com</a></p>
+        <p><strong>Office:</strong> <a href="tel:8950496914">8950496914</a> | <a href="https://wa.me/918950496914" target="_blank">WhatsApp</a></p>
+        <p><strong>Mr. Deepak Kumar:</strong> <a href="tel:8571042210">8571042210</a> | <a href="https://wa.me/918571042210" target="_blank">WhatsApp</a></p>
+        <p><strong>GM Mr. Dinesh Giri:</strong> <a href="tel:8368926021">8368926021</a> | <a href="https://wa.me/918368926021" target="_blank">WhatsApp</a></p>
+        <p><strong>Sr. Salesman Mr. Pawan:</strong> <a href="tel:7447683905">7447683905</a> | <a href="https://wa.me/917447683905" target="_blank">WhatsApp</a></p>
+      </div>
+    </section>
+  </main>
+
+  <a href="https://wa.me/918950496914" class="whatsapp-button" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
+  </a>
 </body>
 </html>
